@@ -12,6 +12,7 @@
  8. Use virtual library ID for A..Z grouping.
  9. Add playall/addall entries to song lists.
 10. Move sync control to manage players dialog.
+11. Fix desktop volume when change players.
 
 0.1.2
 -----
